--- a/long_review/202104004_tim-minh-trong-the-gioi-hau-tuoi-tho/content.html
+++ b/long_review/202104004_tim-minh-trong-the-gioi-hau-tuoi-tho/content.html
@@ -36,16 +36,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="../../index.html#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="../../index.html#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="../../index.html#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="../../index.html#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -58,7 +58,7 @@
     </nav>
     <div class="main-container">
         <header class="item1">
-            <div class="header-text">
+            <div class="header-text" id="title-displayed-in-home">
                 Tìm mình trong thế giới hậu tuổi thơ
             </div>
             <div class="author header-view">
@@ -71,10 +71,12 @@
         <main class="item2">
             <div class="container">
                 <br>
+                <div id="content-displayed-in-home">
                 <p><em>Cuốn sách dành cho các bạn trẻ và các vị phụ huynh...</em></p>
                 <p><em>Xin hãy khoan dung, xin hãy từ bỏ mọi định kiến trước khi bắt đầu hành trình này!</em></p>
                 <p>Dạo này tôi tập tành làm youtube, thường thì khi đọc được một cuốn sách tôi sẽ làm một clip review, nhưng lần này tôi xin được viết, bởi tôi biết mình sẽ không thể kiềm chế được cảm xúc!
                 </p>
+                </div>
 
                 <br>
                 <p>Các bạn trẻ trong cuốn sách này có một điểm chung, tất cả đều có thật, tất cả đều mang những chấn thương tinh thần nặng nề do chính những người thân yêu nhất gây ra. Những chấn thương thể chất thì dễ được thương cảm, nhưng chấn thương
