--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div class="col-md-8">
                                 <h4 class="card-title" id="long_card_title0"></h4>
                                 <p class="card-text" id="long_div0"></p>
-                                <a class="btn btn-light" id="long_card_button0" href="#">Button</a>
+                                <a class="btn btn-light" id="long_card_button0" href="#">Đọc tiếp</a>
                             </div>
                             <img class="col-md-4" id ="long_card_image0" src="">
                         </div>
@@ -214,7 +214,7 @@
                             <div class="col-md-8">
                                 <h4 class="card-title" id="long_card_title1"></h4>
                                 <p class="card-text" id="long_div1"></p>
-                                <a class="btn btn-light" id="long_card_button1" href="#">Button</a>
+                                <a class="btn btn-light" id="long_card_button1" href="#">Đọc tiếp</a>
                             </div>
                             <img class="col-md-4" id ="long_card_image1" src="">
                         </div>
@@ -228,7 +228,7 @@
                             <div class="col-md-8">
                                 <h4 class="card-title" id="long_card_title2"></h4>
                                 <p class="card-text" id="long_div2"></p>
-                                <a class="btn btn-light" id="long_card_button2" href="#">Button</a>
+                                <a class="btn btn-light" id="long_card_button2" href="#">Đọc tiếp</a>
                             </div>
                             <img class="col-md-4" id ="long_card_image2" src="">
                         </div>
@@ -242,7 +242,7 @@
                             <div class="col-md-8">
                                 <h4 class="card-title" id="long_card_title3"></h4>
                                 <p class="card-text" id="long_div3"></p>
-                                <a class="btn btn-light" id="long_card_button3" href="#">Button</a>
+                                <a class="btn btn-light" id="long_card_button3" href="#">Đọc tiếp</a>
                             </div>
                             <img class="col-md-4" id ="long_card_image3" src="">
                         </div>
