--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     <img class="card-img-top" id ="short_card_image0" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div0"></p>
-                                        <a class="btn btn-light" id="short_card_button0" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button0" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
                                     <img class="card-img-top" id ="short_card_image1" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div1"></p>
-                                        <a class="btn btn-light" id="short_card_button1" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button1" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                     <img class="card-img-top" id ="short_card_image2" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div2"></p>
-                                        <a class="btn btn-light" id="short_card_button2" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button2" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                                     <img class="card-img-top" id ="short_card_image3" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div3"></p>
-                                        <a class="btn btn-light" id="short_card_button3" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button3" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                                     <img class="card-img-top" id ="short_card_image4" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div4"></p>
-                                        <a class="btn btn-light" id="short_card_button4" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button4" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                                     <img class="card-img-top" id ="short_card_image5" src="">
                                     <div class="card-body">
                                         <p class="card-text" id="short_div5"></p>
-                                        <a class="btn btn-light" id="short_card_button5" href="#">Đọc tiếp</a>
+                                        <div class="container text-center"><a class="btn btn-light" id="short_card_button5" href="#">Đọc tiếp</a></div>
                                     </div>
                                 </div>
                             </div>
