--- a/short_review/202104007_21-bai-hoc-cho-the-ky-21/content.html
+++ b/short_review/202104007_21-bai-hoc-cho-the-ky-21/content.html
@@ -2,6 +2,16 @@
 <html lang="vi">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-L42GCY93BK"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-L42GCY93BK');
+        </script>    
+    
     <title>Đọc sách cùng Lily - Review ngắn</title>
     <meta charset="utf-8">
     <meta name="author" content="Ly Nguyen Nhu">
@@ -12,7 +22,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../styles/short_review.css">
+    <link rel="stylesheet" href="../../styles/short_review.css">  
+    
 </head>
 
 <style>
