--- a/long_review/202104004_tim-minh-trong-the-gioi-hau-tuoi-tho/content.html
+++ b/long_review/202104004_tim-minh-trong-the-gioi-hau-tuoi-tho/content.html
@@ -2,6 +2,16 @@
 <html lang="vi">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WW3YY5EMZ4"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-WW3YY5EMZ4');
+        </script>
+    
     <title>Đọc sách cùng Lily - Review dài</title>
     <meta charset="utf-8">
     <meta name="author" content="Ly Nguyen Nhu">
