--- a/short_review/202104005_va_roi_nui_vong/content.html
+++ b/short_review/202104005_va_roi_nui_vong/content.html
@@ -2,6 +2,16 @@
 <html lang="vi">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0S7VM4PBP"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-F0S7VM4PBP');
+        </script>
+    
     <title>Đọc sách cùng Lily - Review ngắn</title>
     <meta charset="utf-8">
     <meta name="author" content="Ly Nguyen Nhu">
