--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                                 <p class="card-text" id="long_div1"></p>
                                 <a class="btn btn-light" id="long_card_button1" href="#">Đọc tiếp</a>
                             </div>
-                            <img class="col-md-4" id ="long_card_image1" src="">
+                            <div class="col-md-4">
+                                <img id ="long_card_image1" src="">
+                            </div>
                         </div>
                     </div>                    
                 </div>
