--- a/index.html
+++ b/index.html
@@ -226,10 +226,8 @@
                                 <h4 class="card-title" id="long_card_title1"></h4>
                                 <p class="card-text" id="long_div1"></p>
                                 <a class="btn btn-light" id="long_card_button1" href="#">Đọc tiếp</a>
-                            </div>
-                            <div class="col-md-4">
-                                <img id ="long_card_image1" src="">
-                            </div>
+                            </div>                            
+                            <img class="col-md-4" id ="long_card_image1" src="">                            
                         </div>
                     </div>                    
                 </div>
